:sparkles: adds price predication by sqrft. removes unused onBatchEnd

--- a/src/index.html
+++ b/src/index.html
@@ -125,7 +125,7 @@
               >
                 Predict house price
               </button>
-              <p><strong id="prediction-output"></strong></p>
+              <p><h3 id="prediction-output"></h3></p>
             </div>
           </div>
         </div>
