--- a/src/index.html
+++ b/src/index.html
@@ -7,28 +7,13 @@
     <!--   Header   -->
     <div class="section no-pad-bot" id="index-banner">
       <div class="container">
-        <h5 class="header center blue-text small">
+        <h5 class="header center teal-text small">
           Linear regression with TensorFlow.js
         </h5>
         <div class="row center">
           <h6 class="header col s12 light">
             Train a model to predict house price from living space.
           </h6>
-        </div>
-      </div>
-    </div>
-
-    <!--   Misc buttons   -->
-    <div class="section no-pad-bot light-blue lighten-4">
-      <div class="container">
-        <div class="row center">
-          <button
-            id="toggle-button"
-            class="waves-effect waves-light light-blue btn-small"
-            onclick="main.toggleVisor()">
-            Toggle Visor
-          </button>
-          <br /><br />
         </div>
       </div>
     </div>
@@ -40,7 +25,7 @@
           <!--   Training   -->
           <div class="col s12 m6">
             <div class="icon-block">
-              <h3 class="center light-blue-text">
+              <h3 class="center teal-text">
                 <i class="material-icons" style="font-size: 2em">build</i>
               </h3>
               <h5 class="center">Train & Test</h5>
@@ -63,7 +48,7 @@
                 <button
                   autocomplete="off"
                   id="train-button"
-                  class="waves-effect light-blue waves-light btn"
+                  class="waves-effect waves-light btn"
                   disabled
                   onclick="main.train()"
                 >
@@ -72,7 +57,7 @@
                 <button
                   autocomplete="off"
                   id="test-button"
-                  class="waves-effect light-blue waves-light btn"
+                  class="waves-effect waves-light btn"
                   disabled
                   onclick="main.test()"
                 >
@@ -85,7 +70,7 @@
                 <button
                   autocomplete="off"
                   id="load-button"
-                  class="waves-effect light-blue waves-light btn-small"
+                  class="waves-effect waves-light btn-small"
                   disabled
                   onclick="main.load()"
                 >
@@ -94,7 +79,7 @@
                 <button
                   autocomplete="off"
                   id="save-button"
-                  class="waves-effect light-blue waves-light btn-small"
+                  class="waves-effect waves-light btn-small"
                   disabled
                   onclick="main.save()"
                 >
@@ -107,7 +92,7 @@
           <!--   Prediction   -->
           <div class="col s12 m6">
             <div class="icon-block">
-              <h3 class="center light-blue-text">
+              <h3 class="center teal-text">
                 <i class="material-icons" style="font-size: 2em">timeline</i>
               </h3>
               <h5 class="center">Predict</h5>
@@ -119,7 +104,7 @@
               <button
                 autocomplete="off"
                 id="predict-button"
-                class="waves-effect light-blue waves-light btn"
+                class="waves-effect waves-light btn"
                 disabled
                 onclick="main.predict()"
               >
@@ -128,8 +113,25 @@
               <p><h3 id="prediction-output"></h3></p>
             </div>
           </div>
+
         </div>
       </div>
     </div>
+
+    <!--   Misc buttons   -->
+    <div class="section no-pad-bot teal lighten-4">
+    <div class="container">
+      <div class="row center">
+        <button
+          id="toggle-button"
+          class="waves-effect waves-light btn-small"
+          onclick="main.toggleVisor()">
+          Toggle Visor
+        </button>
+        <br /><br />
+      </div>
+    </div>
+    </div>
+
   </body>
 </html>
