--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,19 @@
     <div class="section no-pad-bot" id="index-banner">
       <div class="container">
         <h5 class="header center teal-text small">
-          Linear regression with TensorFlow.js
+          Machine Learning with TensorFlow.js
         </h5>
-        <div class="row center">
-          <h6 class="header col s12 light">
-            Train a model to predict house price from living space.
-          </h6>
-        </div>
+      </div>
+    </div>
+
+    <div class="section no-pad-bot">
+      <div class="container">
+        <label for="problem-type-select">Choose a problem type:</label>
+        <select name="problem-types" id="problem-type-select" class="browser-default">
+            <option value="linear-regression">Linear Regression (predict house price from living space)</option>
+            <option value="binary-classification" disabled>Binary Classification (predict if property is on the waterfront from house price and living space)</option>
+            <option value="multi-class-classification" disabled>Multi-class Classification (predict number of bedrooms from house prices and living space)</option>
+        </select>
       </div>
     </div>
 
